--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,11 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/commons-beanutils-1.7.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/commons-collections-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/commons-lang-2.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/commons-logging.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/ezmorph-1.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="E:/json-jar/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
