--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -156,6 +156,7 @@
         <activity android:name="com.whut.activity.WifiTestActivity"></activity>
         
         <activity android:name="com.whut.activity.AddCommentActivity"></activity>
+        <activity android:name="com.whut.activity.LoginActivity"></activity>
         <service android:name="com.whut.service.WaveService" >
         </service>
     </application>
