--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="E:/ADT/ADT/workspace1/Customer02/libs/ShareSDK-Core-2.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/AndroidBucket.jar"/>
+	<classpathentry kind="lib" path="libs/BaiduLBS_Android.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-1.4.jar"/>
+	<classpathentry kind="lib" path="libs/core-2.2.jar"/>
+	<classpathentry kind="lib" path="libs/fastjson-1.0.4.jar"/>
+	<classpathentry kind="lib" path="libs/MobTools.jar"/>
+	<classpathentry kind="lib" path="libs/pgyer_sdk_2.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/ShareSDK-QQ-2.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/ShareSDK-SinaWeibo-2.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/ShareSDK-Wechat-Core-2.6.0.jar"/>
+	<classpathentry kind="lib" path="libs/universal-image-loader-1.9.2-SNAPSHOT-with-sources.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
